# mepe

./: .bumpversion.cfg  LICENSE  Makefile  README.md  pyproject.toml
mepe/: display.py  exceptions.py  main.py  scrape.py
