[tool.poetry]
name = "mepe"
version = "0.1.0"
description = ""
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"
packages = [{include = "mepe"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^12.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
