[tool.poetry]
name = "mepe"
version = "0.1.1"
description = ""
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"
packages = [{include = "mepe"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^12.6.0"
prometheus-client = "^0.15.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mepe = 'mepe.main:main'
